Fixed info bugs

--- a/cv.tex
+++ b/cv.tex
@@ -183,24 +183,24 @@ Currently I've started a personal project (EvaluaMe) with which I am putting int
   
   \entry
     {2016}
-    {NP-Complete problem of Job Shop Scheduling. }
+    {Job Shop Scheduling belonging to NP-Complete. }
     {University of Valladolid, Spain \\ 
     \href{https://github.com/garciparedes/Job-Shop-Scheduling-NP-Complete}{\textit{github.com/garciparedes/Job-Shop-Scheduling-NP-Complete}}}
-    {Classwork of Codes and Cryptography. The project involves the implementation in Java of a Calculator with  arbitrary integer arithmetic precision.}
+    {Classwork of Algorithms and Computing. The project involves the study and demonstration of belonging of Job Shop Scheduling to NP-Complete.}
   
   \entry
     {}
     {Longest Common Subsequence.}
     {University of Valladolid, Spain \\
     \href{https://github.com/garciparedes/Longest-Common-Subsequence}{\textit{github.com/garciparedes/Longest-Common-Subsequence}} }
-    {ClassWork of Data Structures and Algorithms. The project involves the implementation of a random text generator implemented in Java.}
+    {Classwork of Algorithms and Computing. The project involves the study and analysis of the problem of finding the Longest Common Substring given two sequences together with a small deployment in Python and Java application that compares the differences between two files.}
     
     \entry
     {}
     {Closest pair of points in n-dimensional space.}
     {University of Valladolid, Spain \\ 
     \href{https://github.com/garciparedes/Closest-Pair-of-Points}{\textit{github.com/garciparedes/Closest-Pair-of-Points}}}
-    {Classwork at Object Oriented Programming. The project consists in modeling an Burguer Shop  in Java.}
+    {Classwork of Algorithms and Computation. The project involves the study of the closest pair problem and a sample implementation in Python.}
 
 \end{entrylist}
 %----------------------------------------------------------------------------------------
