--- a/cv.tex
+++ b/cv.tex
@@ -20,8 +20,7 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \documentclass[]{friggeri-cv} % Add 'print' as an option into the square bracket to remove colors from this template for printing
-\usepackage{verbatim}
-\usepackage{hyperref}
+\usepackage{enumitem}
 
 \addbibresource{bibliography.bib} % Specify the bibliography file to include publications
 
@@ -67,6 +66,18 @@ I'm a student of Computer Engineering with a great desire to learn. I especially
 
 Currently I've started a personal project (EvaluaMe) with which I am putting into practice the knowledge acquired at university.
 
+\noindent\begin{minipage}[t]{0.5\linewidth}
+    \begin{itemize}
+    \item{Proficient Algorithms}
+    \item{Object Oriented Development}
+    \end{itemize}
+    \end{minipage}%
+    \begin{minipage}[t]{0.5\linewidth}
+    \begin{itemize}
+    \item{Version Control Systems}
+    \item{Agile Methodologies}
+    \end{itemize}
+\end{minipage}\par\bigskip
 %------------------------------------------------
 
 
@@ -126,11 +137,28 @@ Currently I've started a personal project (EvaluaMe) with which I am putting int
 \end{entrylist}
 
 %----------------------------------------------------------------------------------------
-%	SKILLS SECTION
+%	TECHNICAL SKILLS SECTION
 %----------------------------------------------------------------------------------------
 
-\section{skills}
+\section{technical skills}
 
+\begin{description}[style=multiline,leftmargin=2.25cm]
+
+%------------------------------------------------
+
+\item[Languages]  Java, Python, C, JavaScript, HTML, Latex, MarkDown,  XML, JSON
+
+\item[Frameworks]  Android
+
+\item[OS]  Unix, Mac, Windows, Android, iOS
+
+\item[Methodologies]  Scrum, Object Oriented Programming, Design Patterns, UML 
+
+\item[Tools]  Sublime Text, Atom, Android Studio, Intellij IDEa, Eclipse, NetBeans, Trello, Github, Visual Paradigm
+
+%------------------------------------------------
+
+\end{description}
 
 
 \newpage
