Hided Applications and Publications

--- a/cv.tex
+++ b/cv.tex
@@ -21,6 +21,7 @@
 
 \documentclass[]{friggeri-cv} % Add 'print' as an option into the square bracket to remove colors from this template for printing
 \usepackage{enumitem}
+\usepackage{verbatim}
 
 \addbibresource{bibliography.bib} % Specify the bibliography file to include publications
 
@@ -68,14 +69,19 @@ Currently I've started a personal project (EvaluaMe) with which I am putting int
 
 \noindent\begin{minipage}[t]{0.5\linewidth}
     \begin{itemize}
-    \item{Proficient Algorithms}
-    \item{Object Oriented Development}
+    	\item{Proficient Algorithms}
+	\item{Data Structures}
+    	\item{Data representation}
+    	\item{Object Oriented Programming}
+
     \end{itemize}
     \end{minipage}%
     \begin{minipage}[t]{0.5\linewidth}
     \begin{itemize}
-    \item{Version Control Systems}
-    \item{Agile Methodologies}
+    	\item{Multi-Thread Programming}
+    	\item{Distributed Programming}
+   	\item{Version Control Systems (VCS)}
+   	\item{Agile Methodologies}
     \end{itemize}
 \end{minipage}\par\bigskip
 %------------------------------------------------
@@ -160,77 +166,6 @@ Currently I've started a personal project (EvaluaMe) with which I am putting int
 
 \end{description}
 
-
-\newpage
-
-%----------------------------------------------------------------------------------------
-%	APPLICATIONS SECTION
-%----------------------------------------------------------------------------------------
-\section{applications}
-
-\begin{entrylist}
-  
-  \entry
-    {2016}
-    {Calculator with arbitrary-precision integer arithmetic. }
-    {University of Valladolid, Spain \\ 
-    \href{https://github.com/ismtabo/cc_bigintegers}{\textit{github.com/ismtabo/cc\_bigintegers}}}
-    {Classwork of Codes and Cryptography. The project involves the implementation in Java of a Calculator with  arbitrary integer arithmetic precision.}
-    \\
-  
-  \entry
-    {2015}
-    {Implementation of a Random Text Generator}
-    {University of Valladolid, Spain \\
-    \href{https://github.com/garciparedes/Generador-de-texto-aleatorio}{\textit{github.com/garciparedes/Generador-de-texto-aleatorio}} }
-    {ClassWork of Data Structures and Algorithms. The project involves the implementation of a random text generator implemented in Java.}
-  
-  \entry
-    {}
-    {EvaluaMe}
-    {EvaluaMe \\
-    \href{https://play.google.com/store/apps/details?id=com.garciparedes.evaluame}{\textit{Play Store: EvaluaMe}} }
-    {Experiment aimed to measure viral spreading of content across the blogosphere.}
-    
-    \entry
-    {}
-    {Modeling a Burguer Shop.}
-    {University of Valladolid, Spain \\ 
-    \href{https://github.com/garciparedes/InfoBurguer}{\textit{github.com/garciparedes/InfoBurguer}}}
-    {Classwork at Object Oriented Programming. The project consists in modeling an Burguer Shop  in Java.}
-
-\end{entrylist}
-
-%----------------------------------------------------------------------------------------
-%	PUBLICATIONS SECTION
-%----------------------------------------------------------------------------------------
-
-\section{publications}
-
-\begin{entrylist}
-  
-  \entry
-    {2016}
-    {Job Shop Scheduling belonging to NP-Complete. }
-    {University of Valladolid, Spain \\ 
-    \href{https://github.com/garciparedes/Job-Shop-Scheduling-NP-Complete}{\textit{github.com/garciparedes/Job-Shop-Scheduling-NP-Complete}}}
-    {Classwork of Algorithms and Computing. The project involves the study and demonstration of belonging of Job Shop Scheduling to NP-Complete.}
-  
-  \entry
-    {}
-    {Longest Common Subsequence.}
-    {University of Valladolid, Spain \\
-    \href{https://github.com/garciparedes/Longest-Common-Subsequence}{\textit{github.com/garciparedes/Longest-Common-Subsequence}} }
-    {Classwork of Algorithms and Computing. The project involves the study and analysis of the problem of finding the Longest Common Substring given two sequences together with a small deployment in Python and Java application that compares the differences between two files.}
-    
-    \entry
-    {}
-    {Closest pair of points in n-dimensional space.}
-    {University of Valladolid, Spain \\ 
-    \href{https://github.com/garciparedes/Closest-Pair-of-Points}{\textit{github.com/garciparedes/Closest-Pair-of-Points}}}
-    {Classwork of Algorithms and Computation. The project involves the study of the closest pair problem and a sample implementation in Python.}
-
-\end{entrylist}
 %----------------------------------------------------------------------------------------
 %	INTERESTS SECTION
 %----------------------------------------------------------------------------------------
