--- a/cv.tex
+++ b/cv.tex
@@ -99,7 +99,7 @@ Currently I've started a personal project (EvaluaMe) with which I am putting int
 
 \entry
 {2013--Now}
-{Degree {\normalfont of Computer Engineering} }
+{Degree {\normalfont on Computer Engineering} }
 {University of Valladolid, Spain}
 {Specialization in Computing}
 
