Worked on Sidebar

--- a/cv.tex
+++ b/cv.tex
@@ -22,6 +22,7 @@
 \documentclass[]{friggeri-cv} % Add 'print' as an option into the square bracket to remove colors from this template for printing
 \usepackage{enumitem}
 \usepackage{verbatim}
+\usepackage{fontawesome}
 
 \addbibresource{bibliography.bib} % Specify the bibliography file to include publications
 
@@ -45,14 +46,28 @@ Spain
 \href{mailto:garciparedes@gmail.com}{garciparedes@gmail.com}
 \href{http://garciparedes.me}{garciparedes.me}
 \href{http://facebook.com/garciparedes}{fb://garciparedes}
+\section{social}
+\href{http://facebook.com/garciparedes}{Facebook\quad\faFacebookSign } 
+\href{http://facebook.com/garciparedes}{LinkedIn\quad\faLinkedinSign } 
+\href{http://facebook.com/garciparedes}{Github\quad\faGithubSign } 
 \section{languages}
 spanish mother tongue
 english fluency
 \section{programming}
-{\color{red} $\varheartsuit$}  Java, Python
-JavaScript, C, C++
-CSS3 \& HTML5
+Java\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit$} 
+Python\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit$} 
+JavaScript\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} 
+ C\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} 
+ C++\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} 
+ \section{personality}
+Java\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} 
+Python\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} 
+JavaScript\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} 
+ C\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} 
+ C++\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} 
 \end{aside}
+
+
 
 %----------------------------------------------------------------------------------------
 %	SUMMARY SECTION
