--- a/cv.tex
+++ b/cv.tex
@@ -43,11 +43,10 @@ Spain
 ~
 +34 696 904 878
 ~
-\href{mailto:garciparedes@gmail.com}{garciparedes@gmail.com}
 \href{http://garciparedes.me}{garciparedes.me}
-\href{http://facebook.com/garciparedes}{fb://garciparedes}
+\href{mailto:garciparedes@gmail.com}{Mail\quad\faEnvelope} 
 \section{social}
-\href{http://facebook.com/garciparedes}{Facebook\quad\faFacebookSign } 
+\href{http://facebook.com/garciparedes}{Facebook\quad\faFacebookSign} 
 \href{http://facebook.com/garciparedes}{LinkedIn\quad\faLinkedinSign } 
 \href{http://facebook.com/garciparedes}{Github\quad\faGithubSign } 
 \section{languages}
@@ -162,7 +161,7 @@ Currently I've started a personal project (EvaluaMe) with which I am putting int
 %----------------------------------------------------------------------------------------
 
 \section{technical skills}
-
+\begin{comment}
 \begin{description}[style=multiline,leftmargin=2.25cm]
 
 %------------------------------------------------
@@ -180,6 +179,40 @@ Currently I've started a personal project (EvaluaMe) with which I am putting int
 %------------------------------------------------
 
 \end{description}
+\end{comment}
+\noindent\begin{minipage}[t]{0.5\linewidth}
+\begin{flushright}
+
+Java\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit$} \\
+Python\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit$} \\ 
+JavaScript\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} \\ 
+ C\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} \\
+ C++\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} \\
+Java\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit$} \\
+Python\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit$} \\ 
+JavaScript\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} \\ 
+ C\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} \\
+ C++\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} \\
+ \end{flushright}
+
+    \end{minipage}%
+    \begin{minipage}[t]{0.5\linewidth}
+\begin{flushright}
+
+Java\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit$} \\
+Python\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit$} \\ 
+JavaScript\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} \\ 
+ C\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} \\
+ C++\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} \\
+ Java\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit$} \\
+Python\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit$} \\ 
+JavaScript\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} \\ 
+ C\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} \\
+ C++\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} \\
+
+ \end{flushright}
+
+\end{minipage}\par\bigskip
 
 %----------------------------------------------------------------------------------------
 %	INTERESTS SECTION
