--- a/cv.tex
+++ b/cv.tex
@@ -46,18 +46,19 @@ Spain
 +34 696 904 878
 \href{mailto:garciparedes@gmail.com}{garciparedes@gmail.com} 
 \section{social}
-\href{http://facebook.com/garciparedes}{LinkedIn\quad\faLinkedin } 
-\href{http://facebook.com/garciparedes}{\textbf{Github}\quad\faGithub }
-\href{http://facebook.com/garciparedes}{Bitbucket\quad\faBitbucket }
-\href{http://facebook.com/garciparedes}{Stack Overflow\quad\faStackOverflow } 
-\href{http://facebook.com/garciparedes}{Trello\quad\faTrello } 
-\href{http://facebook.com/garciparedes}{\textbf{Telegram}\quad\faPaperPlane } 
-\href{http://facebook.com/garciparedes}{Skype\quad\faSkype } 
-\href{http://facebook.com/garciparedes}{Facebook\quad\faFacebook} 
-\href{http://facebook.com/garciparedes}{Twitter\quad\faTwitter } 
-\href{http://facebook.com/garciparedes}{Instagram\quad\faInstagram } 
-\href{http://facebook.com/garciparedes}{Google +\quad\faGooglePlus } 
-\href{http://facebook.com/garciparedes}{Youtube\quad\faYoutubePlay } 
+\href{https://es.linkedin.com/in/garciparedes/en}{LinkedIn\quad\faLinkedin } 
+\href{https://github.com/garciparedes}{\textbf{Github}\quad\faGithub }
+\href{https://bitbucket.org/garciparedes/}{Bitbucket\quad\faBitbucket }
+\href{http://stackoverflow.com/users/3921457/garciparedes}{Stack Overflow\quad\faStackOverflow } 
+\href{https://trello.com/garciparedes}{Trello\quad\faTrello } 
+\href{https://telegram.me/garciparedes}{\textbf{Telegram}\quad\faPaperPlane } 
+\href{skype:garciparedes?call}{Skype\quad\faSkype } 
+\href{https://facebook.com/garciparedes}{Facebook\quad\faFacebook} 
+\href{https://twitter.com/garciparedes}{Twitter\quad\faTwitter } 
+\href{https://www.instagram.com/garciparedes/}{Instagram\quad\faInstagram } 
+\href{https://plus.google.com/+SergioGarcía-garciparedes/}{Google +\quad\faGooglePlus } 
+\href{https://www.youtube.com/user/GaRcYpArEdEs/}{Youtube\quad\faYoutubePlay } 
+\href{http://www.last.fm/user/garciparedes/}{Lastfm\quad\faLastfm} 
 \section{languages}
 spanish mother tongue
 english fluency
@@ -126,7 +127,7 @@ Currently I've started a personal project (EvaluaMe) with which I am putting int
 {2013--Now}
 {Degree {\normalfont on Computer Engineering} }
 {University of Valladolid, Spain}
-{Specialization in Computing}
+{Specialized in Computing}
 
 
 %------------------------------------------------
