Fixed accent bug

--- a/cv.tex
+++ b/cv.tex
@@ -56,7 +56,7 @@ Spain
 \href{https://facebook.com/garciparedes}{Facebook\quad\faFacebook} 
 \href{https://twitter.com/garciparedes}{Twitter\quad\faTwitter } 
 \href{https://www.instagram.com/garciparedes/}{Instagram\quad\faInstagram } 
-\href{https://plus.google.com/+SergioGarcía-garciparedes/}{Google +\quad\faGooglePlus } 
+\href{https://plus.google.com/+SergioGarcia-garciparedes/}{Google +\quad\faGooglePlus } 
 \href{https://www.youtube.com/user/GaRcYpArEdEs/}{Youtube\quad\faYoutubePlay } 
 \href{http://www.last.fm/user/garciparedes/}{Lastfm\quad\faLastfm} 
 \section{languages}
