--- a/cv.tex
+++ b/cv.tex
@@ -99,6 +99,7 @@ Currently I've started a personal project (EvaluaMe) with which I am putting int
 	\item{Data Structures}
     	\item{Data representation}
     	\item{Object Oriented Programming}
+    	\item{Android Development}
 
     \end{itemize}
     \end{minipage}%
@@ -176,59 +177,48 @@ Currently I've started a personal project (EvaluaMe) with which I am putting int
 
 \section{technical skills}
 \hfill
-\begin{comment}
-\begin{description}[style=multiline,leftmargin=2.25cm]
-
-%------------------------------------------------
-
-\item[Languages]  Java, Python, C, JavaScript, HTML, Latex, MarkDown,  XML, JSON
-
-\item[Frameworks]  Android
-
-\item[OS]  Unix, Mac, Windows, Android, iOS
-
-\item[Methodologies]  Scrum, Object Oriented Programming, Design Patterns, UML 
-
-\item[Tools]  Sublime Text, Atom, Android Studio, Intellij IDEa, Eclipse, NetBeans, Trello, Github, Visual Paradigm
-
-%------------------------------------------------
-
-\end{description}
-\end{comment}
 \begin{flushright}
 
 Java\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit$} \\
 
-Python\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit$} \\ 
+Android\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit$} \\
 
-JavaScript\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} \\ 
+Python\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$} \\ 
 
- C\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} \\
+JavaScript\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$} \\ 
+
+ C\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$} \\
  
- C++\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} \\
- 
-Java\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit$} \\
+ Latex\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$} 
+
  \end{flushright}
 
     \end{minipage}%
     \begin{minipage}[t]{0.5\linewidth}
+ 
     \begin{flushright}
-
     \section{personal skills} 
     \end{flushright}
 
 \hfill
 \begin{flushright}
-Java\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit$} \\
-Python\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit$} \\ 
-JavaScript\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} \\ 
- C\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} \\
- C++\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} \\
- Java\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$} \\
+
+Competitive\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit$} \\
+
+Constant\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$} \\ 
+
+Dedicated\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} \\ 
+
+ Organized\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit$} \\
+
+ Communicator\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$} \\
+
+ Sincere\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} 
 
  \end{flushright}
 
 \end{minipage}\par\bigskip
+
 
 %----------------------------------------------------------------------------------------
 %	INTERESTS SECTION
