--- a/cv-sergio-garciaprado.tex
+++ b/cv-sergio-garciaprado.tex
@@ -1,3 +1,4 @@
+% !TEX encoding = UTF-8 Unicode
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Friggeri Resume/CV
 % XeLaTeX Template
@@ -22,6 +23,8 @@
 \documentclass[]{friggeri-cv} % Add 'print' as an option into the square bracket to remove colors from this template for printing
 \usepackage{enumitem}
 \usepackage{verbatim}
+\usepackage[spanish]{babel}
+
 \usepackage{fontawesome}
 
 \addbibresource{bibliography.bib} % Specify the bibliography file to include publications
@@ -29,7 +32,7 @@
 
 \begin{document}
 
-\header{Sergio}{GarcíaPrado}{junior computing scientist \faCode} % Your name and current job title/field
+\header{Sergio}{GarcíaPrado}{junior computer scientist \faCode} % Your name and current job title/field
 
 %----------------------------------------------------------------------------------------
 %	SIDEBAR SECTION
@@ -44,37 +47,38 @@ Spain
 \href{http://garciparedes.me}{\textbf{garciparedes.me}}
 ~
 +34 696 904 878
-\href{mailto:garciparedes@gmail.com}{garciparedes@gmail.com} 
+\href{mailto:garciparedes@gmail.com}{garciparedes@gmail.com}
 \section{social}
-\href{https://es.linkedin.com/in/garciparedes/en}{LinkedIn\quad\faLinkedin } 
+\href{https://es.linkedin.com/in/garciparedes/en}{LinkedIn\quad\faLinkedin }
 \href{https://github.com/garciparedes}{\textbf{Github}\quad\faGithub }
 \href{https://bitbucket.org/garciparedes/}{Bitbucket\quad\faBitbucket }
-\href{http://stackoverflow.com/users/3921457/garciparedes}{Stack Overflow\quad\faStackOverflow } 
-\href{https://trello.com/garciparedes}{Trello\quad\faTrello } 
-\href{https://telegram.me/garciparedes}{\textbf{Telegram}\quad\faPaperPlane } 
-\href{skype:garciparedes?call}{Skype\quad\faSkype } 
-\href{https://facebook.com/garciparedes}{Facebook\quad\faFacebook} 
-\href{https://twitter.com/garciparedes}{Twitter\quad\faTwitter } 
-\href{https://www.instagram.com/garciparedes/}{Instagram\quad\faInstagram } 
-\href{https://plus.google.com/+SergioGarcia-garciparedes/}{Google +\quad\faGooglePlus } 
-\href{https://www.youtube.com/user/GaRcYpArEdEs/}{Youtube\quad\faYoutubePlay } 
-\href{http://www.last.fm/user/garciparedes/}{Lastfm\quad\faLastfm} 
+\href{http://stackoverflow.com/users/3921457/garciparedes}{Stack Overflow\quad\faStackOverflow }
+\href{https://trello.com/garciparedes}{Trello\quad\faTrello }
+\href{https://telegram.me/garciparedes}{\textbf{Telegram}\quad\faPaperPlane }
+\href{skype:garciparedes?call}{Skype\quad\faSkype }
+\href{https://medium.com/@garciparedes}{Medium\quad\faMedium }
+\href{https://facebook.com/garciparedes}{Facebook\quad\faFacebook}
+\href{https://twitter.com/garciparedes}{Twitter\quad\faTwitter }
+\href{https://www.instagram.com/garciparedes/}{Instagram\quad\faInstagram }
+\href{https://plus.google.com/+SergioGarcia-garciparedes/}{Google +\quad\faGooglePlus }
+\href{https://www.youtube.com/user/GaRcYpArEdEs/}{Youtube\quad\faYoutubePlay }
+\href{http://www.last.fm/user/garciparedes/}{Lastfm\quad\faLastfm}
 \section{languages}
 spanish mother tongue
 english fluency
 \begin{comment}
 \section{programming}
-Java\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit$} 
-Python\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit$} 
-JavaScript\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} 
- C\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} 
- C++\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} 
+Java\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit$}
+Python\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit$}
+JavaScript\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
+ C\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
+ C++\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
  \section{personality}
-Java\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} 
-Python\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} 
-JavaScript\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} 
- C\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} 
- C++\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} 
+Java\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
+Python\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
+JavaScript\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
+ C\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
+ C++\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
  \end{comment}
 \end{aside}
 
@@ -89,7 +93,7 @@ JavaScript\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsu
 
 %------------------------------------------------
 
-I'm a student of Computer Engineering with a great desire to learn. I especially like the Computing branch, ie, data structures, algorithms, and everything that has to do with scheduling things. Although I do not close the door to anything. 
+I'm a student of Computer Engineering with a great desire to learn. I especially like the Computing branch, ie, data structures, algorithms, and everything that has to do with scheduling things. Although I do not close the door to anything.
 
 Currently I've started a personal project (EvaluaMe) with which I am putting into practice the knowledge acquired at university.
 
@@ -156,7 +160,7 @@ Currently I've started a personal project (EvaluaMe) with which I am putting int
 {}
 {Algorithms and Computing}
 {University of Valladolid, Spain}
-{Score: 9.5/10.0 with Honors.} 
+{Score: 9.5/10.0 with Honors.}
 
 \\
 \entry
@@ -183,21 +187,21 @@ Java\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varh
 
 Android\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit$} \\
 
-Python\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$} \\ 
+Python\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$} \\
 
-JavaScript\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$} \\ 
+JavaScript\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$} \\
 
  C\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$} \\
- 
- Latex\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$} 
+
+ Latex\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}
 
  \end{flushright}
 
     \end{minipage}%
     \begin{minipage}[t]{0.5\linewidth}
- 
+
     \begin{flushright}
-    \section{personal skills} 
+    \section{personal skills}
     \end{flushright}
 
 \hfill
@@ -205,15 +209,15 @@ JavaScript\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsui
 
 Competitive\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit$} \\
 
-Constant\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$} \\ 
+Constant\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$} \\
 
-Dedicated\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} \\ 
+Dedicated\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} \\
 
  Organized\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit$} \\
 
  Communicator\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$} \\
 
- Sincere\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} 
+ Sincere\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
 
  \end{flushright}
 
