--- a/cv-sergio-garciaprado.tex
+++ b/cv-sergio-garciaprado.tex
@@ -32,7 +32,7 @@
 
 \begin{document}
 
-\header{Sergio}{GarcíaPrado}{junior computer scientist \faCode} % Your name and current job title/field
+\header{Sergio}{GarcíaPrado}{junior computing scientist \faCode} % Your name and current job title/field
 
 %----------------------------------------------------------------------------------------
 %	SIDEBAR SECTION
