Updated bachelor's degree name

--- a/cv-sergio-garciaprado.tex
+++ b/cv-sergio-garciaprado.tex
@@ -130,9 +130,9 @@ Currently I've started a personal project (EvaluaMe) with which I am putting int
 
 \entry
 {2013--Now}
-{Degree {\normalfont on Computer Engineering} }
+{Bachelor's Degree {\normalfont of Computer Science}}
 {University of Valladolid, Spain}
-{Specialized in Computing}
+{Specialized in Computation}
 
 
 %------------------------------------------------
