Improved language levels

--- a/cv-sergio-garciaprado.tex
+++ b/cv-sergio-garciaprado.tex
@@ -64,8 +64,8 @@ Spain
 \href{https://www.youtube.com/user/GaRcYpArEdEs/}{Youtube\quad\faYoutubePlay }
 \href{http://www.last.fm/user/garciparedes/}{Lastfm\quad\faLastfm}
 \section{languages}
-spanish mother tongue
-english fluency
+spanish bilingual
+english medium
 \begin{comment}
 \section{programming}
 Java\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit$}
