updated mail address

--- a/cv-sergio-garciaprado.tex
+++ b/cv-sergio-garciaprado.tex
@@ -47,7 +47,7 @@ Spain
 \href{http://garciparedes.me}{\textbf{garciparedes.me}}
 ~
 +34 696 904 878
-\href{mailto:garciparedes@gmail.com}{garciparedes@gmail.com}
+\href{mailto:sergio@garciparedes.me}{sergio@garciparedes.me}
 \section{social}
 \href{https://es.linkedin.com/in/garciparedes/en}{LinkedIn\quad\faLinkedin }
 \href{https://github.com/garciparedes}{\textbf{Github}\quad\faGithub }
