Working on CV improvements

--- a/cv-sergio-garciaprado.tex
+++ b/cv-sergio-garciaprado.tex
@@ -39,47 +39,46 @@
 %----------------------------------------------------------------------------------------
 
 \begin{aside} % In the aside, each new line forces a line break
-\section{contact}
-7 3º C, La Paz
-34004 Palencia
-Spain
-~
-\href{http://garciparedes.me}{\textbf{garciparedes.me}}
-~
-+34 696 904 878
-\href{mailto:sergio@garciparedes.me}{sergio@garciparedes.me}
-\section{social}
-\href{https://es.linkedin.com/in/garciparedes/en}{LinkedIn\quad\faLinkedin }
-\href{https://github.com/garciparedes}{\textbf{Github}\quad\faGithub }
-\href{https://bitbucket.org/garciparedes/}{Bitbucket\quad\faBitbucket }
-\href{http://stackoverflow.com/users/3921457/garciparedes}{Stack Overflow\quad\faStackOverflow }
-\href{https://trello.com/garciparedes}{Trello\quad\faTrello }
-\href{https://telegram.me/garciparedes}{\textbf{Telegram}\quad\faPaperPlane }
-\href{skype:garciparedes?call}{Skype\quad\faSkype }
-\href{https://medium.com/@garciparedes}{Medium\quad\faMedium }
-\href{https://facebook.com/garciparedes}{Facebook\quad\faFacebook}
-\href{https://twitter.com/garciparedes}{Twitter\quad\faTwitter }
-\href{https://www.instagram.com/garciparedes/}{Instagram\quad\faInstagram }
-\href{https://plus.google.com/+SergioGarcia-garciparedes/}{Google +\quad\faGooglePlus }
-\href{https://www.youtube.com/user/GaRcYpArEdEs/}{Youtube\quad\faYoutubePlay }
-\href{http://www.last.fm/user/garciparedes/}{Lastfm\quad\faLastfm}
-\section{languages}
-spanish bilingual
-english medium
-\begin{comment}
-\section{programming}
-Java\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit$}
-Python\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit$}
-JavaScript\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
- C\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
- C++\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
- \section{personality}
-Java\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
-Python\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
-JavaScript\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
- C\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
- C++\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
- \end{comment}
+
+    \section{contact}
+        7 3º C, La Paz
+        34004 Palencia
+        Spain
+        ~
+        \href{http://garciparedes.me}{\textbf{garciparedes.me}}
+        ~
+        +34 696 904 878
+        \href{mailto:sergio@garciparedes.me}{sergio@garciparedes.me}
+    \section{social}
+        \href{https://es.linkedin.com/in/garciparedes/en}{LinkedIn\quad\faLinkedin }
+        \href{https://github.com/garciparedes}{\textbf{Github}\quad\faGithub }
+        \href{https://bitbucket.org/garciparedes/}{Bitbucket\quad\faBitbucket }
+        \href{http://stackoverflow.com/users/3921457/garciparedes}{Stack Overflow\quad\faStackOverflow }
+        \href{https://trello.com/garciparedes}{Trello\quad\faTrello }
+        \href{https://telegram.me/garciparedes}{\textbf{Telegram}\quad\faPaperPlane }
+        \href{skype:garciparedes?call}{Skype\quad\faSkype }
+        \href{https://medium.com/@garciparedes}{Medium\quad\faMedium }
+        \href{https://facebook.com/garciparedes}{Facebook\quad\faFacebook}
+        \href{https://twitter.com/garciparedes}{Twitter\quad\faTwitter }
+        \href{https://www.instagram.com/garciparedes/}{Instagram\quad\faInstagram }
+        \href{https://plus.google.com/+SergioGarcia-garciparedes/}{Google +\quad\faGooglePlus }
+        \href{https://www.youtube.com/user/GaRcYpArEdEs/}{Youtube\quad\faYoutubePlay }
+        \href{http://www.last.fm/user/garciparedes/}{Lastfm\quad\faLastfm}
+    \section{languages}
+        spanish bilingual
+        english medium
+    \section{programming}
+        Java\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit$}
+        Python\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit$}
+        JavaScript\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
+         C\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
+         C++\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
+    \section{personality}
+        Competitive\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit$}
+        Constant\quad{\color{blue} $\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}
+        Dedicated\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
+        Organized\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit$}
+        Sincere\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
 \end{aside}
 
 
@@ -116,6 +115,24 @@ Currently I've started a personal project (EvaluaMe) with which I am putting int
     \end{itemize}
 \end{minipage}\par\bigskip
 %------------------------------------------------
+
+
+%----------------------------------------------------------------------------------------
+%	WORK SECTION
+%----------------------------------------------------------------------------------------
+
+\section{work}
+
+\begin{entrylist}
+
+%------------------------------------------------
+
+
+
+%------------------------------------------------
+
+\end{entrylist}
+
 
 
 %----------------------------------------------------------------------------------------
@@ -173,57 +190,27 @@ Currently I've started a personal project (EvaluaMe) with which I am putting int
 
 \end{entrylist}
 \\
-\noindent\begin{minipage}[t]{0.5\linewidth}
-
+\begin{comment}
 %----------------------------------------------------------------------------------------
 %	TECHNICAL SKILLS SECTION
 %----------------------------------------------------------------------------------------
 
-\section{technical skills}
-\hfill
-\begin{flushright}
+    \section{technical skills}
+    \hfill
 
-Java\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit$} \\
+        Java\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit$} \\
 
-Android\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit$} \\
+        Android\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit$} \\
 
-Python\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$} \\
+        Python\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$} \\
 
-JavaScript\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$} \\
+        JavaScript\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$} \\
 
- C\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$} \\
+         C\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$} \\
 
- Latex\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}
+         Latex\quad{\color{red} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}
 
- \end{flushright}
-
-    \end{minipage}%
-    \begin{minipage}[t]{0.5\linewidth}
-
-    \begin{flushright}
-    \section{personal skills}
-    \end{flushright}
-
-\hfill
-\begin{flushright}
-
-Competitive\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit$} \\
-
-Constant\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$} \\
-
-Dedicated\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$} \\
-
- Organized\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit$} \\
-
- Communicator\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$} \\
-
- Sincere\quad{\color{blue} $\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit\varheartsuit$}{\color{black} $\varheartsuit\varheartsuit$}
-
- \end{flushright}
-
-\end{minipage}\par\bigskip
-
-
+\end{comment}
 %----------------------------------------------------------------------------------------
 %	INTERESTS SECTION
 %----------------------------------------------------------------------------------------
